--- a/Appium/Dockerfile
+++ b/Appium/Dockerfile
@@ -1,148 +1,137 @@
-FROM ubuntu:noble-20260113
-
-ENV DEBIAN_FRONTEND=noninteractive
+ARG UBUNTU_VERSION="noble-20260113"
+FROM ubuntu:${UBUNTU_VERSION} AS android_img
 
 #==================
 # General Packages
 #------------------
 # ca-certificates
 #   SSL client
-# curl
-#   Transfer data from or to a server
-# gnupg
-#   Encryption software. It is needed for nodejs
-# libqt5webkit5
-#   Web content engine (Fix issue in Android)
-# openjdk-17-jdk
+# openjdk-25-jdk
 #   Java
-# sudo
-#   Sudo user
-# tzdata
-#   Timezone
 # unzip
 #   Unzip zip file
 # wget
 #   Network downloader
-# xvfb
-#   X virtual framebuffer
-# zip
-#   Make a zip file
 #==================
 RUN apt-get -qqy update && \
     apt dist-upgrade -y && \
     apt-get -qqy --no-install-recommends install \
     ca-certificates \
-    curl \
-    gnupg \
-    libqt5webkit5 \
-    openjdk-17-jdk \
-    sudo \
-    tzdata \
+    openjdk-25-jdk \
     unzip \
     wget \
-    xvfb \
-    zip \
-    ffmpeg \
   && rm -rf /var/lib/apt/lists/*
 
 #===============
 # Set JAVA_HOME
 #===============
-ENV JAVA_HOME="/usr/lib/jvm/java-17-openjdk-amd64" \
-    PATH=$PATH:$JAVA_HOME/bin
+ENV JAVA_HOME="/usr/lib/jvm/java-25-openjdk-amd64"
+ENV PATH=$PATH:${JAVA_HOME}/bin
+
+#================
+# Set up Android
+#================
+ENV SDK_VERSION=commandlinetools-linux-13114758_latest
+ENV ANDROID_BUILD_TOOLS_VERSION=36.0.0
+ENV ANDROID_CMD=cmdline-tools
+ENV ANDROID_HOME=/opt/android
+ENV ANDROID_CMD_HOME=/opt/android/${ANDROID_CMD}
+ENV ANDROID_TOOL_HOME=${ANDROID_CMD_HOME}/tools
+ENV PATH=$PATH:${ANDROID_TOOL_HOME}:${ANDROID_TOOL_HOME}/bin
+
+RUN wget -O tools.zip https://dl.google.com/android/repository/${SDK_VERSION}.zip && \
+    unzip tools.zip && rm tools.zip && \
+    mkdir -p ${ANDROID_CMD_HOME}/tools && \
+    mv ${ANDROID_CMD}/* ${ANDROID_TOOL_HOME}/ && \
+    rm -rf ${ANDROID_CMD} && \
+    echo y | sdkmanager "platform-tools" && \
+    echo y | sdkmanager "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
+
+FROM ubuntu:${UBUNTU_VERSION}
+
+ENV DEBIAN_FRONTEND=noninteractive
+
+#==================
+# General Packages
+#------------------
+# libqt5webkit5
+#   Web content engine (Fix issue in Android)
+# openjdk-25-jdk
+#   Java
+# tzdata
+#   Timezone
+# xvfb
+#   X virtual framebuffer
+#==================
+RUN apt-get -qqy update && \
+    apt dist-upgrade -y && \
+    apt-get -qqy --no-install-recommends install \
+    libqt5webkit5 \
+    openjdk-25-jdk \
+    tzdata \
+    xvfb \
+  && rm -rf /var/lib/apt/lists/*
 
 #===============================
 # Set Timezone (UTC as default)
 #===============================
-ENV TZ "UTC"
+ENV TZ="UTC"
 RUN echo "${TZ}" > /etc/timezone \
   && dpkg-reconfigure --frontend noninteractive tzdata
+
+#=====================
+# Set up needed tools
+#=====================
+ENV JAVA_HOME="/usr/lib/jvm/java-25-openjdk-amd64"
+ENV PATH=$PATH:${JAVA_HOME}/bin
+
+ENV ANDROID_HOME=/opt/android
+COPY --from=android_img ${ANDROID_HOME} ${ANDROID_HOME}
+ENV PATH=${PATH}:\
+${ANDROID_HOME}/cmdline-tools/tools:\
+${ANDROID_HOME}/cmdline-tools/tools/bin:\
+${ANDROID_HOME}/platform-tools:\
+${ANDROID_HOME}/build-tools
+
+COPY --from=node:24.13.0-slim /usr/local /usr/local
 
 #===============
 # Create a user
 #===============
-ARG USER_PASS=secret
-RUN groupadd androidusr \
-         --gid 1301 \
-  && useradd androidusr \
-         --uid 1300 \
-         --gid 1301 \
+ARG USERNAME=androidusr
+ENV USERNAME=${USERNAME}
+ARG USERPASS=secret
+ARG USERID=1300
+ENV USERID=${USERID}
+ARG GROUPID=1301
+ENV GROUPID=${GROUPID}
+RUN groupadd ${USERNAME} \
+         --gid ${GROUPID} \
+  && useradd ${USERNAME} \
+         --uid ${USERID} \
+         --gid ${GROUPID} \
          --create-home \
          --shell /bin/bash \
-  && usermod -aG sudo androidusr \
-  && echo androidusr:${USER_PASS} | chpasswd \
-  && echo 'androidusr ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
+  && echo ${USERNAME}:${USERPASS} | chpasswd
 
-WORKDIR /home/androidusr
-
-#=====================
-# Install Android SDK
-#=====================
-ENV SDK_VERSION=commandlinetools-linux-13114758_latest
-ENV ANDROID_BUILD_TOOLS_VERSION=36.0.0
-ENV ANDROID_FOLDER_NAME=cmdline-tools
-ENV ANDROID_DOWNLOAD_PATH=/home/androidusr/${ANDROID_FOLDER_NAME} \
-    ANDROID_HOME=/opt/android \
-    ANDROID_TOOL_HOME=/opt/android/${ANDROID_FOLDER_NAME}
-
-RUN wget -O tools.zip https://dl.google.com/android/repository/${SDK_VERSION}.zip && \
-    unzip tools.zip && rm tools.zip && \
-    chmod a+x -R ${ANDROID_DOWNLOAD_PATH} && \
-    chown -R 1300:1301 ${ANDROID_DOWNLOAD_PATH} && \
-    mkdir -p ${ANDROID_TOOL_HOME} && \
-    mv ${ANDROID_DOWNLOAD_PATH} ${ANDROID_TOOL_HOME}/tools
-ENV PATH=$PATH:${ANDROID_TOOL_HOME}/tools:${ANDROID_TOOL_HOME}/tools/bin
-
-# https://askubuntu.com/questions/885658/android-sdk-repositories-cfg-could-not-be-loaded
-RUN mkdir -p ~/.android && \
-    touch ~/.android/repositories.cfg && \
-    echo y | sdkmanager "platform-tools" && \
-    echo y | sdkmanager "build-tools;$ANDROID_BUILD_TOOLS_VERSION" && \
-    mv ~/.android .android && \
-    chown -R 1300:1301 .android
-ENV PATH=$PATH:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools
-
-#====================================
-# Install latest nodejs, npm, appium
-#====================================
-ENV NODE_VERSION=22
+#================
+# Install Appium
+#================
 ENV APPIUM_VERSION=3.1.1
-RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION}.x | bash && \
-    apt-get -qqy install nodejs && \
-    npm install -g appium@${APPIUM_VERSION} && \
-    exit 0 && \
-    npm cache clean && \
-    apt-get remove --purge -y npm && \
-    apt-get autoremove --purge -y && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
-    apt-get clean
+RUN npm install -g appium@${APPIUM_VERSION}
 
 #====================================================
 # Fix permission issue to download e.g. chromedriver
 #====================================================
-RUN chown -R 1300:1301 /usr/lib/node_modules/appium
+RUN chown -R ${USERID}:${GROUPID} /usr/local/lib/node_modules/appium
 
-#==============
-# Copy scripts
-#==============
-ENV SCRIPT_PATH="appium-docker-android"
-RUN mkdir -p ${SCRIPT_PATH}
-COPY start.sh \
-     generate_selenium_config.sh \
-     wireless_autoconnect.sh \
-     wireless_connect.sh \
-     ${SCRIPT_PATH}/
-RUN chown -R 1300:1301 ${SCRIPT_PATH}
-ENV APP_PATH=/home/androidusr/${SCRIPT_PATH}
+#========================
+# Install Appium drivers
+#========================
+ENV WORK_PATH=/home/${USERNAME}
+WORKDIR ${WORK_PATH}
+USER ${USERID}:${GROUPID}
 
-#==================
-# Use created user
-#==================
-USER 1300:1301
-
-#===============================
-# Install basic Android drivers
-#===============================
 ENV APPIUM_DRIVER_ESPRESSO_VERSION="6.0.5"
 ENV APPIUM_DRIVER_FLUTTER_VERSION="3.2.0"
 ENV APPIUM_DRIVER_GECKO_VERSION="2.0.6"
@@ -151,6 +140,16 @@ RUN appium driver install --source=npm appium-espresso-driver@${APPIUM_DRIVER_ES
     appium driver install --source=npm appium-flutter-driver@${APPIUM_DRIVER_FLUTTER_VERSION} && \
     appium driver install --source=npm appium-geckodriver@${APPIUM_DRIVER_GECKO_VERSION} && \
     appium driver install --source=npm appium-uiautomator2-driver@${APPIUM_DRIVER_UIAUTOMATOR2_VERSION}
+
+#================
+# Set up project
+#================
+ENV SCRIPT_PATH="appium-docker-android"
+RUN mkdir -p .android && \
+    touch ~/.android/repositories.cfg && \
+    mkdir -p ${SCRIPT_PATH}
+COPY --chown=${USERID}:${GROUPID} . ${SCRIPT_PATH}/
+ENV APP_PATH=/home/${USERNAME}/${SCRIPT_PATH}
 
 #===============
 # Expose Port
@@ -163,4 +162,5 @@ EXPOSE 4723
 #==============
 # Start script
 #==============
-CMD ./${SCRIPT_PATH}/start.sh
+ENTRYPOINT ["sh", "-c"]
+CMD ["${WORK_PATH}/${SCRIPT_PATH}/start.sh"]
