--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     privileged: true
     volumes:
       - /dev/bus/usb:/dev/bus/usb
-      - ~/.android:/root/.android
+      - ~/.android:/home/androidusr/.android
     environment:
       - CONNECT_TO_GRID=true
       - SELENIUM_HOST=selenium_hub
